--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
           </div>
         </nav>
         <!-- Game Display -->
-        <div class="container border mt-3 mx-0">
+        <div class="container mt-3 mx-0">
                 {% for row in rows %}
                     <div class="row flex-nowrap d-flex justify-content-center">
                     {% for column in columns %}
@@ -70,7 +70,6 @@
         </div>
         </div>
     </div>
-    <a href="#message-modal" class="btn btn-lg btn-primary" data-toggle="modal">Launch Demo Modal</a>
     {% endblock %}
     <script src="/static/js/app.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
